Initial support for Composite Resource cards